# ar-games

./: .gitignore  README.md  ar-game-ideas.md  https_server.py  pyproject.toml
ar-flashcards/: README.md  cards.json  debug_detection.py  detection.py  generate-markers.js  generate_arjs_markers.py  generate_markers.py  index.html  markers.html  mobile.html  server.py  style.css  viewer.js
ar-rag/: README.md  backend.py  cards.json  generate_qr_markers.py  markers.html  mobile.html
ar-transcribe/: README.md  laptop.html  mobile.html  server.py
bubble-pop/: cameras.py  detection.py  game.js  index.html  server.py  style.css
docs/superpowers/plans/: 2026-03-29-ninja-slice.md
gesture-pdf/: ar-viewer.js  ar.css  ar.html  detection.py  index.html  server.py  style.css  viewer.js
ninja-slice/: collision.js  debug.py  detection.py  game.js  index.html  server.py  style.css
ninja-slice/tests/: test_collision.js  test_detection.py
